Remove some obsolete references

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "author": "Tamzin Blake <tamzinblake@gmail.com> (http://tamzinblake.com)",
-  "name": "thomblake",
-  "description": "Web server for thomblake.me",
+  "name": "tamzinblake",
+  "description": "Web server for tamzinblake.com",
   "version": "0.0.0",
   "homepage": "https://github.com/tamzinblake/thomblake",
   "repository": {
